@@ -1,3 +1,8 @@
+2005-09-07    <tino@firebird.03.softkill.net>
+
+	* setuptino.sh: extended to create directory or softlink,
+	commandline args are optional (needed if you create files).
+
 2005-09-05    <tino@firebird.03.softkill.net>
 
 	* file.h (tino_file_read_line_x): added
